# setpoint

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: test.yml
config/: analytics-daemon.service  claude-ops-guard.service  claude-quality-guard.service  daily-advisor.service  daily-advisor.timer  defaults.json  guard-controls.json  guard-targets.json  health-auditor.service  health-auditor.timer
config/hooks/: adversarial-why.md  backlog-drift.md  compact-approaching.md  investigate-phase.md  mcp-bloat.md  plan-phase.md  rate-limit-near.md  read-before-edit.md
docs/: ADVISOR-CLASSIFIER.md  ANALYTICS-SPEC.md  AUTO-EFFORT.md  Claude-Code-HUD-Research Brief.md  DESIGN.md  HOOKS.md  HUD-SPEC.md  RESEARCH-PROMPT.md  VALUE-AUDIT.md  claude-code-open-bugs-2026-04-19.md
research/: train-advisor-classifier.py
scripts/: build-guard.sh  install-advisor-timer.sh  install-analytics.sh  install-auto-effort.sh  install-guard.sh  install-health-timer.sh  install-hooks.sh  install.sh  migrate.sh  rollback.sh
src/advisor/: baselines.js  baselines.test.js  classifier-weights.default.json  classifier.js  classifier.test.js  effort-controller.js  effort-controller.test.js  effort-writer.js  effort-writer.test.js  engine.js  engine.test.js  fsm-controller.js  fsm-controller.test.js  index.js  index.test.js  peak-split.js  reversals.js  reversals.test.js  (+2 more)
src/guard/rust/: Cargo.toml
src/guard/rust/src/: backoff.rs  categories.rs  log.rs  main.rs  overrides.rs  paths.rs  watcher.rs
tests/: no-production-mocks.test.js
(+215 files in other folders)
